# devclad

./: .deepsource.toml  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  bun.lockb  flightcontrol.json  index.html  nixpacks.toml  package-lock.json  package.json  rome.json  tailwind.config.cjs  tsconfig.json  turbo.json  vite.config.ts
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  manage.py  nixpacks.toml  pyproject.toml  railway.json  readme.md  requirements.txt
apps/server/devclad/: asgi.py  schema.py  urls.py  wsgi.py
apps/server/devclad/settings/: __init__.py  base.py  development.py  gitpod.py  production.py
apps/server/social/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/server/social/meetings/: serializers.py  urls.py  views.py
apps/server/social/migrations/: 0001_initial.py  0002_initial.py  0003_meetingroom.py  0004_socialprofile_preferred_day_and_more.py  0005_alter_socialprofile_preferred_day_and_more.py  0006_remove_meetingroom_link.py
apps/server/social/ml/: match.py  serializers.py  urls.py  views.py
apps/server/stream/: admin.py  models.py  urls.py  views.py
apps/server/stream/migrations/: 0001_initial.py  0002_initial.py
apps/server/users/: adapters.py  admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  validators.py  views.py
apps/server/users/internal/: __init__.py  serializers.py  urls.py  views.py
apps/server/work/: admin.py  apps.py  models.py
(+308 files in other folders)
